<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1C7732"
    android:id="@+id/rule_scrollview">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.glenn.pinochlescorepad.Rules">

    <TextView
        android:id="@+id/rulesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rulesTitle"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/ruleIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rulesTitle"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/rulesIntro1"/>
    <TextView
        android:id="@+id/ruleIntro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ruleIntro"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/rulesIntro2"/>
    <TextView
        android:id="@+id/rule_intro3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ruleIntro2"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/rulesIntro3"/>

    <TextView
        android:id="@+id/ruleHeading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rule_intro3"
        android:textColor="@color/colorText"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:textAllCaps="true"
        android:text="@string/heading1"/>

    <TextView
        android:id="@+id/meldPointsParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:layout_below="@id/ruleHeading1"
        android:text="@string/meldParagraph"/>
    <TableLayout
        android:id="@+id/meldTable"
        android:layout_below="@id/meldPointsParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/nineTrump"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/nineTrumpPts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/nonTrumpMarriage"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/nonTrumpMarriagePts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/trumpMarriage"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/trumpMarriagePts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/fortyJacks"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/fortyJacksPts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/pinochle"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/pinochlePoints"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/sixtyQueens"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/sixtyQueensPts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/eightyKings"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/eightyKingsPts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/hundredAces"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/hundredAcesPts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/family"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/familyPts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/doublePinochle"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/doublePinochlePts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/thousandAces"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/thousandAcesPts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/doubleFamily"
                android:textSize="14sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/doubleFamilyPts"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/asterisk_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/meldTable"
        android:text="@string/asterisk"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/biddingHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asterisk_info"
        android:textColor="@color/colorText"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/biddingHeading"/>

    <TextView
        android:id="@+id/biddingPar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/biddingHeading"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/biddingParagraph"/>
    <TextView
        android:id="@+id/biddingPar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/biddingPar1"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/biddingParagraph2"/>
    <TextView
        android:id="@+id/biddingPar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/biddingPar2"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/biddingParagraph3"/>

    <TextView
        android:id="@+id/meldHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/biddingPar3"
        android:textColor="@color/colorText"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="40dp"
        android:textAllCaps="true"
        android:text="@string/meldingHeading"/>

    <TextView
        android:id="@+id/meldPar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/meldHeading"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/meldingParagraph"/>

    <TextView
        android:id="@+id/meldPar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/meldPar"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/meldingParagraph2"/>

    <TextView
        android:id="@+id/meldPar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/meldPar2"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/meldingParagraph3"/>

    <TextView
        android:id="@+id/gamePlayHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/meldPar3"
        android:textColor="@color/colorText"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="40dp"
        android:textAllCaps="true"
        android:text="@string/gamePlayHeading"/>

    <TextView
        android:id="@+id/gamePlayPar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gamePlayHeading"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/gamePlayParagraph"/>

    <TextView
        android:id="@+id/gamePlayPar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gamePlayPar"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/gamePlayParagraph2"/>

    <TextView
        android:id="@+id/shootHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gamePlayPar2"
        android:textColor="@color/colorText"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="40dp"
        android:textAllCaps="true"
        android:text="@string/shootMoonTitle"/>

    <TextView
        android:id="@+id/shootMoonPar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shootHeading"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="@string/shootMoonParagraph"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shootMoonPar"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:paddingBottom="80dp"
        android:text="@string/shootMoonParagraph2"/>

</RelativeLayout>
</ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:elevation="6dp"
        android:src="@drawable/ic_home_white_48dp"
        app:backgroundTint="@color/buttonBackground"
        app:layout_anchorGravity="bottom|right|end"
        android:onClick="goHomeRules"/>

</android.support.design.widget.CoordinatorLayout>