<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.glenn.pinochlescorepad.Bidding"
    android:background="@drawable/greenfelt"
    android:id="@+id/parentPanel">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text0"
        android:text="@string/whoWonBid"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>
    <RadioGroup
        android:id="@+id/bidwinnerradio"
        android:layout_below="@id/text0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/names1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:onClick="onRadioButtonTeamClicked"/>
        <RadioButton
            android:id="@+id/names2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:onClick="onRadioButtonTeamClicked"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/linear2"
        android:layout_below="@id/bidwinnerradio">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/winningBid"
            android:text="@string/howMuch"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/meld"
            android:text="@string/meld"
            android:textSize="20sp"
            android:onClick="goHome"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear3"
        android:layout_below="@id/linear2">
        <EditText
            android:id="@+id/bidPoints"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/bidEx"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:gravity="center_horizontal"/>
        <EditText
            android:id="@+id/winnerMeld"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/meldEx"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/whatTrump"
        android:text="@string/trump"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@id/linear3"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>
    <RadioGroup
        android:id="@+id/trumpRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/whatTrump"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:layout_centerVertical="true">
        <RadioButton
            android:id="@+id/spades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spades"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:onClick="onRadioButtonTrumpClicked"/>
        <RadioButton
            android:id="@+id/hearts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hearts"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:onClick="onRadioButtonTrumpClicked"/>
        <RadioButton
            android:id="@+id/clubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clubs"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:onClick="onRadioButtonTrumpClicked"/>
        <RadioButton
            android:id="@+id/diamonds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diamonds"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:onClick="onRadioButtonTrumpClicked"/>
    </RadioGroup>
    <TextView
        android:id="@+id/oppMeld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/trumpRadioGroup"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:text="@string/oppMeld"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/oppMeldEdit"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/oppMeld"
        android:hint="@string/meldEx"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:gravity="bottom"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:layout_weight=".2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:id="@+id/button5"
                android:layout_column="0"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:elevation="2dp"
                android:stateListAnimator="@anim/button_elevation"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:onClick="go_to_scorepad"/>

            <Button
                android:layout_weight=".2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/goSet"
                android:id="@+id/button6"
                android:layout_column="14"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:elevation="2dp"
                android:stateListAnimator="@anim/button_elevation"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:onClick="goSet"/>
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:layout_weight=".2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shootMoon"
                android:id="@+id/button7"
                android:layout_column="0"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:elevation="2dp"
                android:stateListAnimator="@anim/button_elevation"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="4dp"
                android:onClick="shoot_the_moon"/>

            <Button
                android:layout_weight=".2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:id="@+id/button8"
                android:layout_column="14"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:elevation="2dp"
                android:stateListAnimator="@anim/button_elevation"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:onClick="goHome"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>